php-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php
  template:
    metadata:
      labels:
        app: php
    spec:
      containers:
        - name: php-container
          image: 705689285387.dkr.ecr.us-east-1.amazonaws.com/codered-backend-app:latest
          ports:
            - containerPort: 9000
