php-service.yml
apiVersion: v1
kind: Service
metadata:
  name: php-svc
spec:
  selector:
    app: php
  ports:
    - protocol: TCP
      port: 80  
      targetPort: 80
  type: LoadBalancer
